; ModuleID = '/home/carl/AnghaBench/linux/arch/sparc/net/extr_bpf_jit_comp_64.c_create_simple_focus_bits.c'
source_filename = "/home/carl/AnghaBench/linux/arch/sparc/net/extr_bpf_jit_comp_64.c_create_simple_focus_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64, i32, i32)* @create_simple_focus_bits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @create_simple_focus_bits(i64 %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp slt i32 %11, 32
  br i1 %12, label %13, label %29

13:                                               ; preds = %4
  %14 = load i64, i64* %6, align 8
  %15 = load i32, i32* %7, align 4
  %16 = zext i32 %15 to i64
  %17 = lshr i64 %14, %16
  %18 = load i32, i32* %8, align 4
  %19 = zext i32 %18 to i64
  %20 = shl i64 %17, %19
  store i64 %20, i64* %10, align 8
  %21 = load i64, i64* %5, align 8
  %22 = load i32, i32* %7, align 4
  %23 = sub nsw i32 32, %22
  %24 = zext i32 %23 to i64
  %25 = shl i64 %21, %24
  %26 = load i32, i32* %8, align 4
  %27 = zext i32 %26 to i64
  %28 = shl i64 %25, %27
  store i64 %28, i64* %9, align 8
  br label %38

29:                                               ; preds = %4
  store i64 0, i64* %10, align 8
  %30 = load i64, i64* %5, align 8
  %31 = load i32, i32* %7, align 4
  %32 = sub nsw i32 %31, 32
  %33 = zext i32 %32 to i64
  %34 = lshr i64 %30, %33
  %35 = load i32, i32* %8, align 4
  %36 = zext i32 %35 to i64
  %37 = shl i64 %34, %36
  store i64 %37, i64* %9, align 8
  br label %38

38:                                               ; preds = %29, %13
  %39 = load i64, i64* %9, align 8
  %40 = load i64, i64* %10, align 8
  %41 = or i64 %39, %40
  ret i64 %41
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
